# Pylance-Patcher

./:  pylance-patcher.md  .devcontainer.json  .dockerignore  .gitignore  Dockerfile  Readme.md  pylance_patcher.py  pyproject.toml
pylance_patcher/: __init__.py
