[project]
name = "pylance-patcher"
version = "0.0.0-0"
description = "Patch Pylance to use with for VS Code forks"
readme = " pylance-patcher.md"  # Leading space ensures this file appears first in GitHub Gists
requires-python = "~=3.13.0"
dependencies = [
  "rich>=14.0.0",
  "typer>=0.12.0",
]

[project.scripts]
pylance-patcher = "pylance_patcher:app"

[dependency-groups]
dev = [
  "pyright[nodejs]>=1.1.364",
  "pytest>=6.0.0",
  "ruff>=0.2.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Conflicting with formatter:
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812",  # incorrect-line-break-after-operator
  "D203",  # incorrect-blank-line-before-class
  "D213",  # multi-line-summary-second-line
]
unfixable = [
  "T201",  # Do not delete print statements silently
]

[tool.uv.build-backend]
# UV's build backend expects modules in src/<package_name>/ by default.
# Setting namespace=true allows flexible module discovery at the root,
# which is necessary for GitHub Gists since they don't support directories.
namespace = true
module-root = ""
