[project]
name = "pylance-patcher"
version = "0.0.0"
description = "Patch Pylance to use with for VS Code forks"
readme = "Readme.md"
requires-python = ">=3.12.0"
dependencies = [
  "rich>=14.0.0",
  "typer>=0.12.0",
]

[tool.taskipy.tasks]
lint = "ruff check --fix . ; pyright"
format = "ruff format ."
typecheck = "pyright"

[project.scripts]
pylance-patcher = "pylance_patcher:app"

[dependency-groups]
dev = [
  "pyright>=1.1.364",
  "ruff>=0.2.0",
  "taskipy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "pylance_patcher"

[tool.ruff]
# 1行の長さを最大120文字に設定
line-length = 120
# インデントの幅を4スペースに設定
indent-width = 4
# Python 3.12 を利用する
target-version = "py312"

[tool.ruff.lint]
# flake8, pycodestyle, pyupgrade, isort, Ruff 固有のルールを使う
select = ["F", "E", "W", "UP", "I", "RUF"]
ignore = [
    "E501",    # 1行の長さを超えている場合の警告を抑制
    "E731",    # Do not assign a `lambda` expression, use a `def` を抑制
    "RUF001",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF002",  # 全角記号など `ambiguous unicode character` も使いたいため
    "RUF003",  # 全角記号など `ambiguous unicode character` も使いたいため
]

[tool.ruff.lint.isort]
# インポートブロックの後に2行空ける
lines-after-imports = 2

[tool.ruff.format]
# シングルクオートを使う
quote-style = "single"
# インデントにはスペースを使う
indent-style = "space"

[tool.pyright]
# Python バージョンを指定
pythonVersion = "3.12"
# TypeCheckingMode を strict に設定（VSCode の設定と同等）
typeCheckingMode = "strict"
# プロジェクトルートを指定
pythonPlatform = "All"
# 除外するパス
exclude = [
    "**/__pycache__",
    "**/.venv",
]
# VSCode の settings.json の diagnosticSeverityOverrides に対応する設定
reportConstantRedefinition = "none"
reportDeprecated = "warning"
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"
reportShadowedImports = "none"
reportUnnecessaryComparison = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"
reportUnusedFunction = "none"
